php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #44818 php://memory writeable when opened read only
Submitted: 2008-04-24 12:45 UTC Modified: 2008-11-11 00:45 UTC
Votes:3
Avg. Score:3.7 ± 0.5
Reproduced:3 of 3 (100.0%)
Same Version:1 (33.3%)
Same OS:1 (33.3%)
From: davemastergeneral at gmail dot com Assigned:
Status: Closed Package: Streams related
PHP Version: 5.2CVS-2008-04-24 (snap) OS: Linux csl1226 2.6.22-14-generic
Private report: No CVE-ID: None
 [2008-04-24 12:45 UTC] davemastergeneral at gmail dot com
Description:
------------
I use php://memory to save resources when unit testing, I found it possible to write to the stream despite opening it read only. Not sure if this is the desired behaviour.



Reproduce code:
---------------
<?php
/**
 * php://memory bug 
 */

$fh = fopen('php://memory', 'r');
var_dump(fwrite($fh, 'dave'));

?>


Expected result:
----------------
int(0)

Actual result:
--------------
int(4)

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2008-04-25 08:12 UTC] davemastergeneral at gmail dot com
Actually, expected result should be

bool(false)

For an error?
 [2008-10-30 17:06 UTC] jani@php.net
Please try using this CVS snapshot:

  http://snaps.php.net/php5.2-latest.tar.gz
 
For Windows:

  http://windows.php.net/snapshots/


 [2008-11-07 01:00 UTC] php-bugs at lists dot php dot net
No feedback was provided for this bug for over a week, so it is
being suspended automatically. If you are able to provide the
information that was originally requested, please do so and change
the status of the bug back to "Open".
 [2008-11-10 09:33 UTC] davemastergeneral at gmail dot com
<?php
echo phpversion(), PHP_EOL;
$fh = fopen('php://memory', 'r');
var_dump(fwrite($fh, 'dave'));
?>

Actual result:

5.2.7RC4-dev
int(4)

Expected result:

5.2.7RC4-dev
bool(false)
 [2008-11-10 09:34 UTC] davemastergeneral at gmail dot com
Provided Feedback
 [2008-11-11 00:45 UTC] lbarnaud@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC