Fixed bug #44818 (php://memory writeable when opened read only)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@268798 c90b9560-bf6c-de11-be94-00142212c4b1